--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@prisma/client": "4.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "http-status-codes": "^2.2.0"
+    "http-status-codes": "^2.2.0",
+    "joi": "^17.6.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
