--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "4.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
     "joi": "^17.6.0"
   },
