--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.0.0",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
