--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/index.ts",
     "test": "jest",
-    "test:watch": "jest --watchAll --no-coverage",
-    "test:coverage": "jest --coverage"
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage",
+    "posttest": "ts-node tests/recreateDatabase.ts",
+    "restore": "ts-node tests/recreateDatabase.ts"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -15,10 +17,7 @@
   "dependencies": {
     "@prisma/client": "4.0.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "express-async-errors": "^3.1.1",
-    "http-status-codes": "^2.2.0",
-    "joi": "^17.6.0"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -33,7 +32,6 @@
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prisma": "^4.0.0",
-    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
