--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.1",
     "express-async-errors": "^3.1.1",
     "http-status-codes": "^2.2.0",
-    "joi": "^17.6.0"
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
