--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 PORT=3000
 DATABASE_URL=postgresql://postgres:password@db:5432/postgres?schema=desafio_xpi
+JWT_SECRET=7xt+6G9bOEWH+jtxBID3jEqj9yBhGL1U4FzfFHjlL+Q=
