--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "4.0.0",
+    "@prisma/client": "^4.1.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -36,7 +36,7 @@
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.3",
     "nodemon": "^2.0.19",
-    "prisma": "^4.0.0",
+    "prisma": "^4.1.0",
     "prisma-dbml-generator": "^0.9.1",
     "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
