--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-import-resolver-typescript": "^3.2.6",
     "eslint-plugin-import": "^2.26.0",
     "jest": "^28.1.3",
+    "jest-mock-extended": "^2.0.7",
     "nodemon": "^2.0.19",
     "prisma": "^4.1.0",
     "prisma-dbml-generator": "^0.9.1",
