--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install dependencies
         run: yarn --frozen-lockfile
 
+      - name: Prisma generate
+        run: yarn prisma generate
+
       - name: Run tests
         run: yarn test
 
