--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "prestart": "prisma generate",
+    "start": "ts-node src/index.ts",
+    "predev": "prisma migrate reset && prisma generate",
     "dev": "nodemon --exec ts-node src/index.ts",
     "test": "jest",
     "test:watch": "jest --watchAll --no-coverage",
