chore: prepare to deploy

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "prebuild": "prisma generate",
     "build": "tsc",
-    "postbuild": "prisma generate",
     "prestart": "prisma migrate deploy",
     "start": "node dist/src/index.js",
     "predev": "prisma migrate reset --force && prisma generate",
